--- a/src/index.css
+++ b/src/index.css
@@ -54,11 +54,10 @@ button:hover {
 }
 
 button:active {
-  transform: translateY(0);
+  transform: none;
 }
 
 button:focus,
 button:focus-visible {
-  outline: 2px solid #1db954;
-  outline-offset: 2px;
+  outline: none;
 }
