--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
   --spotify-black: #121212;
   --spotify-medium-gray: #535353;
   --spotify-light-gray: #B3B3B3;
+  --album-darkest-color: #121212;
 
   color-scheme: dark;
   color: rgba(255, 255, 255, 0.87);
