--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
 :root {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   line-height: 1.5;
-  font-weight: 400;
+  font-weight: 500; /* Roboto Medium */
 
   /* Spotify Colors */
   --spotify-green: #1DB954;
